src/components/styles/About.css
.about-section {
  display: flex;
  align-items: center;
  justify-content: left;
  place-items: center;
  position: relative;
  opacity: 1;
  height: auto;
  width: var(--cWidth);
  margin: auto;
}
.about-me {
  padding: 50px 0px;
  padding-bottom: 0;
  width: 500px;
  max-width: calc(100% - 15px);
}
.about-me h3 {
  font-size: 25px;
  text-transform: uppercase;
  letter-spacing: 7px;
  font-weight: 400;
  color: var(--accentColor);
}

.about-me p {
  font-size: 33px;
  font-weight: 600;
  line-height: 36px;
  letter-spacing: 1px;
}

@media only screen and (min-width: 600px) {
  .about-section {
    justify-content: center;
  }
}
@media only screen and (min-width: 768px) {
  .about-me {
    width: 500px;
    max-width: calc(100% - 70px);
    transform: translateY(0%);
  }
  .about-section {
    opacity: 1;
  }
}
@media only screen and (min-width: 1025px) {
  .about-section {
    width: var(--cWidth);
    justify-content: right;
    max-width: 1920px;
    height: var(--vh);
    padding: 0px;
    opacity: 1;
  }
  .about-me {
    padding: 0px;
    width: 50%;
  }
  .about-me p {
    font-size: 1.9vw;
    line-height: 2.3vw;
  }
}
@media only screen and (min-width: 1950px) {
  .about-me p {
    font-size: 2.5rem;
    line-height: 2.7rem;
  }
}

@media only screen and (max-width: 1024px) {
  .about-section {
    height: auto;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    padding-top: 58vh;
    padding-bottom: 60px;
    box-sizing: border-box;
    position: relative;
    z-index: 6;
    background-color: var(--backgroundColor);
  }
  .about-me {
    text-align: center;
    width: 100%;
    max-width: 100%;
    padding: 20px 20px 0;
    z-index: 7;
    box-sizing: border-box;
  }
  .about-me h3 {
    font-size: 18px;
    letter-spacing: 4px;
  }
  .about-me p {
    font-size: 22px;
    line-height: 28px;
  }
}

